--- a/html/elements/item_card/item_card.html
+++ b/html/elements/item_card/item_card.html
@@ -8,7 +8,7 @@
                 <option> Armor</option>
             </select>
         </div>
-            <div class='flex flexcolumn white outline smooth' style='position : relative; margin-top: 2px; margin-bottom: 2px;'>
+            <div class='flex flexcolumn white outline smooth' style='position : relative; margin-top: 2px; margin-bottom: 2px; max-height:150px'>
                 <br>
                 <ui name='ui_image'/><br>      
             </div>
