--- a/html/elements/item_card/itemcard_weapons.html
+++ b/html/elements/item_card/itemcard_weapons.html
@@ -1,120 +1,120 @@
 <div class="flexrow weapontabs">
     <tabs class="flexrow flexaround fit-x size4" tab-category='main-tab' tab-selected="alttext flexmiddle lrpadding smooth"
-        tab-selected-style="height: 40px; width:100px; background-image:url(images/svg/tabbg-s.svg); font-family:'abel'; font-size:12pt; text-transform:uppercase "
-        ;'>
+        tab-selected-style="height: 40px; width:100px; background-image:url(images/svg/tabbg-s.svg); font-family:'abel'; font-size:12pt; text-transform:uppercase ">
         <tab class='flexmiddle link lrpadding cstab' primary="true">basic</tab>
         <tab class='flexmiddle link lrpadding cstab'>statistics</tab>
         <tab class="flexmiddle link lrpadding cstab">qualities</tab>
         <tab class='flexmiddle link lrpadding cstab'>Hardpoints</tab>
 </div>
 
+<div class="scroll-y">
+    <div class="flexcolumn" main-tab='basic'>
+        <input type="text" class="itemname" target="info.name" />
+        <div class='flexcolumn info'>
+            <ui name='ui_rawNotes' />
+        </div>
 
-<div class="flexcolumn" main-tab='basic'>
-    <input type="text" class="itemname" target="info.name" />
-    <div class='flexcolumn info'>
-        <ui name='ui_rawNotes' />
     </div>
 
-</div>
 
+    <div class="flexcolumn" main-tab="statistics">
 
-<div class="flexcolumn" main-tab="statistics">
-
-    <div class="flexrow flexaround mainStats" style="margin-bottom:3px">
-        <div class="flexcolumn rtgbg">
-            <input target="weapon.dam" />
-            <div class="rtglabel"> Damage</div>
+        <div class="flexrow flexaround mainStats" style="margin-bottom:3px;">
+            <div class="flexcolumn rtgbg">
+                <input target="weapon.dam" />
+                <div class="rtglabel"> Damage</div>
+            </div>
+            <div class="flexcolumn rtgbg">
+                <input target="weapon.crit" />
+                <div class="rtglabel"> Critical
+                </div>
+            </div>
         </div>
-        <div class="flexcolumn rtgbg">
-            <input target="weapon.crit" />
-            <div class="rtglabel"> Critical
+
+        <div class="flexcolumn greyborder-round scroll-y" style="height:260px">
+
+            <div class="flexrow weapstats">
+                <p><b>Weapon Skill:</b></p> <select target="weapon.skill">
+
+                    <option>Brawl</option>
+                    <option>Melee</option>
+                    <option>Gunnery</option>
+                    <option>Ranged - Light</option>
+                    <option>Ranged - Heavy</option>
+                    <option>Lightsaber</option>
+                    <option>Other</option> <!-- work out how to handle this later?-->
+                </select>
+            </div>
+
+            <div class="flexrow weapstats">
+                <p><b> Range:</b></p> <select target="weapon.rng">
+                    <option>Eng</option>
+                    <option>Short</option>
+                    <option>Med</option>
+                    <option>Lng</option>
+                    <option>Ext</option>
+                </select>
+            </div>
+            <div class="flexrow weapstats">
+                <p><b>Hardpoints:</b></p><input type="text" target="weapon.hardpoints.max" />
+            </div>
+            <div class="flexrow flexaround">
+                <div class="flexcolumn propertycol">
+                    <p><b>Ranked Qualities</b></p>
+                    <div class="flexrow scroll-y ranked-property">
+                        <bank target="weapon.ranked_properties">
+                            <div cond="eval{@%path%>0}">eval{@%path%.name @%path%}</div>
+                        </bank>
+
+
+                    </div>
+                </div>
+                <div class="flexcolumn propertycol">
+                    <p><b>Un-ranked Qualities</b></p>
+                    <div class="flexrow scroll-y ranked-property">
+                        <list target="weapon.unranked_properties">
+                            <div cond="eval{@%path%>0}">eval{@%path%.name}</div>
+                        </list>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 
-    <div class="flexcolumn greyborder-round" style="height:240px">
+    <div class="flexrow" main-tab="qualities" style="padding-top:20px">
+        <div class="flexcolumn greyborder-round" style="width:50%; height:225px; margin:2px">
+            <p><b>Ranked Qualities</b></p>
+            <div class="flexcolumn scroll-y table" style="border:1px black solid; height:250px">
+                <bank target="weapon.ranked_properties">
+                    <div class="flexrow">
+                        <div class=" flexrow tablerow start" style="min-width:80%">
+                            <p>eval{@%path%.name}</p>
 
-        <div class="flexrow weapstats">
-            <p><b>Weapon Skill:</b></p> <select target="weapon.skill">
-
-                <option>Brawl</option>
-                <option>Melee</option>
-                <option>Gunnery</option>
-                <option>Ranged - Light</option>
-                <option>Ranged - Heavy</option>
-                <option>Lightsaber</option>
-                <option>Other</option> <!-- work out how to handle this later?-->
-            </select>
-        </div>
-
-        <div class="flexrow weapstats">
-            <p><b> Range:</b></p> <select target="weapon.rng">
-                <option>Engaged</option>
-                <option>Short</option>
-                <option> Medium</option>
-                <option> Long</option>
-                <option> Extreme</option>
-            </select>
-        </div>
-        <div class="flexrow weapstats">
-            <p><b>Hardpoints:</b></p><input type="text" target="weapon.hardpoints.max" />
-        </div>
-        <div class="flexrow flexaround">
-            <div class="flexcolumn propertycol">
-                <p><b>Ranked Qualities</b></p>
-                <div class="flexrow scroll-y ranked-property">
-                    <bank target="weapon.ranked_properties">
-                        <div cond="eval{@%path%>0}">eval{@%path%.name @%path%}</div>
-                    </bank>
-
-
-                </div>
+                        </div>
+                        <div class="flexrow tablerow end" style="width:100%">
+                            <input type="text" target="eval{weapon.ranked_properties.%index%}" style="width:30px; margin:2px" />
+                        </div>
+                    </div>
+                </bank>
             </div>
-            <div class="flexcolumn propertycol">
-                <p><b>Un-ranked Qualities</b></p>
-                <div class="flexrow scroll-y ranked-property">
-                    <list target="weapon.unranked_properties">
-                        <div cond="eval{@%path%>0}">eval{@%path%.name}</div>
-                    </list>
-                </div>
+
+        </div>
+
+        <div class="flexcolumn greyborder-round" style="width:50%; height:225px; margin:2px">
+            <p><b> Unranked Qualities</b></p>
+            <div class="flexcolumn scroll-y table" style="border:1px black solid; max-height:250px">
+                <bank target="weapon.unranked_properties">
+                    <div class="flexrow">
+                        <div class=" flexrow tablerow start" style="min-width:80%">
+                            <p>eval{@%path%.name}</p>
+
+                        </div>
+                        <div class="flexrow tablerow end" style="width:100%">
+                            <input type="checkbox" target="eval{weapon.unranked_properties.%index%}" check="1" uncheck="0" />
+                        </div>
+                    </div>
+                </bank>
             </div>
-        </div>
-    </div>
-</div>
-
-<div class="flexrow" main-tab="qualities" style="padding-top:20px">
-    <div class="flexcolumn greyborder-round" style="width:50%; height:275px; margin:2px">
-        <p><b>Ranked Qualities</b></p>
-        <div class="flexcolumn scroll-y table" style="border:1px black solid; height:250px">
-            <bank target="weapon.ranked_properties">
-                <div class="flexrow">
-                    <div class=" flexrow tablerow start" style="min-width:80%">
-                        <p>eval{@%path%.name}</p>
-
-                    </div>
-                    <div class="flexrow tablerow end" style="width:100%">
-                        <input type="text" target="eval{weapon.ranked_properties.%index%}" style="width:30px; margin:2px" />
-                    </div>
-                </div>
-            </bank>
-        </div>
-
-    </div>
-
-    <div class="flexcolumn greyborder-round" style="width:50%; height:275px; margin:2px">
-        <p><b> Unranked Qualities</b></p>
-        <div class="flexcolumn scroll-y table" style="border:1px black solid; max-height:250px">
-            <bank target="weapon.unranked_properties">
-                <div class="flexrow">
-                    <div class=" flexrow tablerow start" style="min-width:80%">
-                        <p>eval{@inventory.%index%.name}</p>
-
-                    </div>
-                    <div class="flexrow tablerow end" style="width:100%">
-                        <input type="checkbox" target="eval{weapon.unranked_properties.%index%}" check="1" uncheck="0" />
-                    </div>
-                </div>
-            </bank>
         </div>
     </div>
 </div>
