--- a/html/actors/pc_sheet/charsheet.html
+++ b/html/actors/pc_sheet/charsheet.html
@@ -1,4 +1,3 @@
-
 <div class='sheetbg'>
 
     <div class="charinfobox flexrow">
@@ -49,10 +48,11 @@
         <div class='flexcolumn derivedsingle'>
             <div class='title'>soak value
             </div>
-            <input target='counters.soak'/>
+            <div class="fixedVal">eval{M@counters.soak}
+            </div>
             <div class="flexrow flexmiddle lowercontainer title link" Style="color:black; text-align:center">Modifiers
 
-                    <ui name="ui_link" scope-click="ui_modifiers" scope-lookup="counters.soak" scope-icon="list-alt">
+                <ui name="ui_link" scope-click="ui_modifiers" scope-lookup="counters.soak" scope-icon="list-alt">
 
             </div>
         </div>
@@ -60,12 +60,12 @@
         <div class='flexcolumn deriveddbl'>
             <div class='title'>wounds</div>
             <div class='flexrow inputcontainer'>
-                <input target='counters.wounds' >
-                <input target='counters.wounds.max' >
+                <input target='counters.wounds'>
+                <input target='counters.wounds.max'>
             </div>
             <div class='flexrow lowercontainer title'>
                 <div class=' left'>current</div>
-                <div class ='right'>threshold</div>
+                <div class='right'>threshold</div>
 
             </div>
         </div>
@@ -73,12 +73,12 @@
         <div class='flexcolumn deriveddbl'>
             <div class='title'>strain</div>
             <div class='flexrow inputcontainer'>
-                <input target='counters.strain' >
-                <input target='counters.strain.max' >
+                <input target='counters.strain'>
+                <input target='counters.strain.max'>
             </div>
             <div class='flexrow lowercontainer title'>
                 <div class=' left'>current</div>
-                <div class ='right'>threshold</div>
+                <div class='right'>threshold</div>
 
             </div>
 
@@ -87,12 +87,16 @@
         <div class='flexcolumn deriveddbl'>
             <div class='title'>defence</div>
             <div class='flexrow inputcontainer'>
-                <input target='counters.mdef' >
-                <input target='counters.rdef' >
+                <input target='counters.mdef'>
+                <input target='counters.rdef'>
             </div>
             <div class='flexrow lowercontainer title'>
-                <div class=' left'><ui name="ui_link" scope-click="ui_modifiers" scope-lookup="counters.mdef" scope-icon="list-alt">melee</ui></div>
-                <div class ='right'><ui name="ui_link" scope-click="ui_modifiers" scope-lookup="counters.rdef" scope-icon="list-alt">ranged</ui></div>
+                <div class=' left'>
+                    <ui name="ui_link" scope-click="ui_modifiers" scope-lookup="counters.mdef" scope-icon="list-alt">melee</ui>
+                </div>
+                <div class='right'>
+                    <ui name="ui_link" scope-click="ui_modifiers" scope-lookup="counters.rdef" scope-icon="list-alt">ranged</ui>
+                </div>
 
             </div>
         </div>
@@ -139,7 +143,9 @@
             </div>
         </div>
     </div>
-    <tabs class="flexrow flexaround fit-x size4" tab-category='main-tab' tab-selected="alttext flexmiddle lrpadding smooth" tab-selected-style="height: 40px; width:100px; background-image:url(images/svg/tabbg-s.svg); font-family:'abel'; font-size:12pt; text-transform:uppercase ";'>
+    <tabs class="flexrow flexaround fit-x size4" tab-category='main-tab' tab-selected="alttext flexmiddle lrpadding smooth"
+        tab-selected-style="height: 40px; width:100px; background-image:url(images/svg/tabbg-s.svg); font-family:'abel'; font-size:12pt; text-transform:uppercase "
+        ;'>
         <tab class='flexmiddle link lrpadding cstab'>skills</tab>
         <tab class='flexmiddle link lrpadding cstab'>combat</tab>
         <tab class='flexmiddle link lrpadding cstab'>talents</tab>
@@ -150,24 +156,24 @@
 
     <div main-tab='skills' class='flexrow skilltab'>
         <div class='flexcolumn leftcol'>
-            <ui name="SKILLS_GENERAL_UI"/>
+            <ui name="SKILLS_GENERAL_UI" />
         </div>
 
         <div class='flexcolumn rightcol'>
-            <ui name="SKILLS_COMBAT_UI"/>
-            <ui name="SKILLS_KNOW_UI"/>
-            <ui name="SKILLS_CUST_UI"/>
+            <ui name="SKILLS_COMBAT_UI" />
+            <ui name="SKILLS_KNOW_UI" />
+            <ui name="SKILLS_CUST_UI" />
         </div>
 
 
     </div>
-    
+
     <div main-tab="equipment">
-        <ui name="EQUIP_TAB_UI"/>
+        <ui name="EQUIP_TAB_UI" />
     </div>
 
     <div main-tab="combat">
         <ui name='COMBAT_TAB_UI'></ui>
     </div>
-    
-</div> 
+
+</div>
