Skills rework completed. All skills significantly changed

--- a/html/actors/pc_sheet/charsheet.html
+++ b/html/actors/pc_sheet/charsheet.html
@@ -180,4 +180,8 @@
         <ui name="TALENTS_TAB_UI"></ui>
     </div>
 
+    <div main-tab="bio">
+        <ui name="BIO_TAB_UI" />
+    </div>
+
 </div>
