finished skill overhaul. Default skills added. stuff and also nonsense

--- a/html/actors/pc_sheet/charsheet.html
+++ b/html/actors/pc_sheet/charsheet.html
@@ -106,39 +106,39 @@
 
         <div class='flexcolumn rtgbg'>
             <input target='stats.br'>
-            <div class='rtglabel'>
+            <div class='rtglabel' style="text-align: center">
                 brawn
             </div>
         </div>
 
         <div class='flexcolumn rtgbg'>
             <input target='stats.ag'>
-            <div class='rtglabel'>
+            <div class='rtglabel' style="text-align: center">
                 agility
             </div>
         </div>
         <div class='flexcolumn rtgbg'>
             <input target='stats.int'>
-            <div class='rtglabel'>
+            <div class='rtglabel' style="text-align: center">
                 intellect
             </div>
         </div>
 
         <div class='flexcolumn rtgbg'>
             <input target='stats.cun'>
-            <div class='rtglabel'>
+            <div class='rtglabel' style="text-align: center">
                 cunning
             </div>
         </div>
         <div class='flexcolumn rtgbg'>
             <input target='stats.wp'>
-            <div class='rtglabel'>
+            <div class='rtglabel' style="text-align: center">
                 willpower
             </div>
         </div>
         <div class='flexcolumn rtgbg'>
             <input target='stats.pre'>
-            <div class='rtglabel'>
+            <div class='rtglabel' style="text-align: center">
                 presence
             </div>
         </div>
@@ -182,6 +182,10 @@
 
     <div main-tab="bio">
         <ui name="BIO_TAB_UI" />
+    </div>
+
+    <div main-tab="powers">
+        <ui name="POWERS_TAB_UI"></ui>
     </div>
 
 </div>
