--- a/html/actors/pc_sheet/skillstab_custom.html
+++ b/html/actors/pc_sheet/skillstab_custom.html
@@ -3,13 +3,7 @@
         <create type="SKILL" target="custskill"></create>
     </click>
 </div>
-<div class="tableheading">General Skills</div>
-
-<div class="tableheading flexrow">
-    <div class="namecol flexmiddle">Skill name</div>
-    <div class="careercol flexmiddle">Career</div>
-    <div class="rankscol flexmiddle">Ranks</div>
-</div>
+<div class="tableheading">Custom Skills</div>
 
 <div class="skilltable">
     <bank target="custskill">
