--- a/html/actors/pc_sheet/skillstab_know.html
+++ b/html/actors/pc_sheet/skillstab_know.html
@@ -3,13 +3,8 @@
         <create type="SKILL" target="knowskill"></create>
     </click>
 </div>
-<div class="tableheading">General Skills</div>
+<div class="tableheading">Knowledge Skills</div>
 
-<div class="tableheading flexrow">
-    <div class="namecol flexmiddle">Skill name</div>
-    <div class="careercol flexmiddle">Career</div>
-    <div class="rankscol flexmiddle">Ranks</div>
-</div>
 
 <div class="skilltable">
     <bank target="knowskill">
