small tweaks to powers tab to get basic functionality

--- a/html/actors/pc_sheet/powers_tab.html
+++ b/html/actors/pc_sheet/powers_tab.html
@@ -1,12 +1,12 @@
 <div class="flexcolumn greyborder-round pcsheet" style="max-height:800px">
-    <div class="sheetbutton glyphicon glyphicon-plus">Add new Talent
+    <div class="sheetbutton glyphicon glyphicon-plus">Add new Power
         <click>
             <create type="POWER" target="powers"></create>
         </click>
     </div>
     <div class="flexcolumn table scroll-y">
         <div class="flexrow">
-            <div style="width:25%">Talent Name</div>
+            <div style="width:25%">Power Name Name</div>
             <div style="width:15%">Book/Page</div>
             <div style="width:50%">Description</div>
             <div></div>
