--- a/html/elements/powers_card.html
+++ b/html/elements/powers_card.html
@@ -1,8 +1,8 @@
 <div class="sheet">
 
     <div class="greyborder-round flex-left" style="width:100%; text-align: left; padding-bottom:10px">
-<h1>Talent</h1>
-        <p><label>Talent Name: </label><input type="text" target="info.name"></p>
+<h1>Powers</h1>
+        <p><label>Power Name: </label><input type="text" target="info.name"></p>
         <p><label>Book/Page:</label><input type="text" target="info.page"></p>
         </p>
 <p>Description:</p>
